# icet-manish

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .run_code_analysis.sh  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  README.rst  compile.sh  compile_win64.bat  grep  hcp-tranform-test.py  setup.py
.gitlab/issue_templates/: Bug.md  Task.md  User_Story.md
benchmark/: README.md  benchmark_ce_calculator.py  benchmark_cluster_space.py  benchmark_many_body_neighbor_list.py  benchmark_neighbor_list.py  benchmark_orbit.py  many_body_neighbor_list.py  mbnl_benchmark.py  neighbor_list.py  neighborlist_benchmark.py  profile_lattice_site.py  profile_matrix_of_equivalent_positions.py  profile_orbit.py  profile_orbit_list.py  profile_permutation_matrix.py
doc/: Makefile  letsencrypt-setup.html
doc/apidoc/: Doxyfile
doc/homepage/: index.html  letsencrypt-setup.html
doc/unused_code/: README.md
doc/userguide/: background.rst  bibliography.rst  conf.py  credits.rst  glossary.rst  index.rst  installation.rst
examples/: enumerate_structures.py  get_and_view_singlets.py  get_cluster_count.py  get_cluster_space_info.py  get_cluster_vector.py  get_clusterspace_info.py  get_clustervector.py  get_manybodyneighborlist.py  get_native_clusters.py  get_neighbor_list.py  get_neighborlist.py  get_permutation_map.py  get_permutationmap.py  map_structure_to_reference.py  semi_grand_canonical_simulation.py  test_cell_geometry.py  test_cluster-vectors-hcp.py  test_cluster_vector_correlation.py  test_clustervector_correlation.py  test_orbitlist.py  test_permutationmap.py  test_pm_from_atoms.py  train_ce.py  try_orbitlist.py
examples/advanced_topics/: enumerate_structures.py  free_energy_canonical_ensemble.py  get_cluster_counts.py  get_cluster_space_info.py  get_neighbor_list.py  get_permutation_matrix.py  mixing_energy.ce  parallel_monte_carlo.py  sqs_generation.py  test_cluster_vector_correlation.py  training_set_generation.py  training_set_generation_with_base.py
examples/tutorial/: 1_construct_cluster_expansion.py  3_enumerate_structures.py  4_analyze_ecis.py  5a_run_monte_carlo_sgc.py  5b_run_monte_carlo_vcsgc.py  (+1 more)
icet/: __init__.py
icetdev/: __init__.py  cluster.py  clusterCounts.py  cluster_counts.py  cluster_expansion.py  cluster_space.py  clusterspace.py  latticeNeighbor.py  lattice_site.py  localOrbitlistGenerator.py  local_orbitlist_generator.py  many_body_neighbor_list.py  manybodyNeighborlist.py  manybody_neighborlist.py  neighbor_list.py  neighborlist.py  orbit.py  orbitList.py  orbit_list.py  permutationMap.py  permutation_map.py  structure.py  structure_container.py
mchammer/: __init__.py  configuration_manager.py  data_analysis.py  data_container.py  free_energy_tools.py
src/: #LatticeNeighbor.hpp#  CMakeLists.txt  Cluster.cpp  Cluster.hpp  ClusterCounts.cpp  ClusterCounts.hpp  ClusterExpansionCalculator.cpp  ClusterExpansionCalculator.hpp  ClusterSpace.cpp  ClusterSpace.hpp  ClusterVector.hpp  FittedJob.hpp  Geometry.cpp  Geometry.hpp  LatticeNeighbor.hpp  LatticeSite.hpp  LocalOrbitListGenerator.cpp  LocalOrbitListGenerator.hpp  LocalOrbitlistGenerator.cpp  LocalOrbitlistGenerator.hpp  ManyBodyNeighborList.cpp  ManyBodyNeighborList.hpp  ManybodyNeighborlist.cpp  ManybodyNeighborlist.hpp  NeighborList.cpp  NeighborList.hpp  Neighborlist.cpp  Neighborlist.hpp  Orbit.cpp  Orbit.hpp  OrbitList.cpp  OrbitList.hpp  OrbitListGenerator.hpp  PeriodicTable.hpp  PermutationMap.cpp  PermutationMap.hpp  PermutedPositionsMatrix.cpp  PermutedPositionsMatrix.hpp  PyBinding.cpp  Structure.cpp  (+6 more)
tests/: __init__.py  check_flake8__.py  check_pep8_pyflakes__.py  gen_structure_database.py  generate_structures_for_testing.py  main.py  manybodyNeighborlistTester.py  structure_atoms_conversion.py  structure_distance.py  test_cluster-vectors-bcc.py  test_cluster-vectors-hcp.py  test_cluster.py  test_cluster__.py  test_cluster_expansion.py  test_cluster_space.py  test_cluster_vectors.py  test_cluster_vectors_bcc.py  test_cluster_vectors_for_supercells.py  test_cluster_vectors_hcp.py  test_cluster_vectors_with_different_number_of_allowed_elements.py  test_clustervector_correlation.py  test_clustervectors.py  test_clustervectors_bcc.py  test_clustervectors_hcp.py  test_clustervectors_with_different_Mi.py  test_clustervectors_with_different_number_of_allowed_elements.py  test_convex_hull.py  test_counting.py  test_get_clustervectors.py  test_lattice_neighbor.py  test_lattice_site.py  test_many_body_neighbor_list.py  test_manybodyNeighborlist.py  test_manybody_neighborlist.py  test_map_sites.py  test_neighbor_list.py  test_neighborlist.py  test_orbit_list_sorting.py  test_orbitlist.py  test_orbitlist_sorting.py  (+8 more)
tutorial/: construct_cluster_expansion.py  plot_mixing_energy.py  prepare_reference_data.py
(+448 files in other folders)
