# Require a modern version of CMake.
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0 FATAL_ERROR)
PROJECT(icetdev)
SET(CMAKE_BUILD_TYPE Release)

# Enable C++11 standard.
IF(NOT CMAKE_VERSION VERSION_LESS "3.1")
    SET(CMAKE_CXX_STANDARD 11)
    SET(CMAKE_CXX_STANDARD_REQUIRED ON)
ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

# Find Boost library.
IF(NOT USE_BOOST_FILESYSTEM_LIB)
    FIND_PACKAGE(Boost REQUIRED)
ELSE()
    FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem)
ENDIF()
IF(NOT Boost_FOUND)
    MESSAGE(FATAL_ERROR "Boost library not found. Reason: ${Boost_ERROR_REASON}")
ENDIF()
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

# Find Eigen3 library
FIND_PACKAGE(Eigen3 REQUIRED)
IF(NOT Eigen3_FOUND)
    MESSAGE(FATAL_ERROR "Eigen3 library not found. Reason: ${Boost_ERROR_REASON}")
ENDIF()
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

# Compile code.
ADD_SUBDIRECTORY(src)
